--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,9 +1,9 @@
 name: CI checks
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   AndroidLints:
